# smtc-modem-cores

./: .gitmodules  Cargo.toml
.github/workflows/: rust.yml
smtc-modem-cores/: Cargo.toml
smtc-modem-cores-sys/: Cargo.toml  build.rs
smtc-modem-cores/src/: sx126x.rs
