[package]
name = "smtc-modem-cores-sys"
version = "0.1.0"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
edition = "2024"
build = "build.rs"

[build-dependencies]
bindgen = { version="0", default-features = false }
cmake = "0"
pkg-config = "0.3"
clang-sys = { version = "1.0", features = ["runtime", "clang_10_0"] }

[dependencies]
cty =  "0"
